[package]
name = "skyline"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ultimate-research/skyline-rs"
description = "A library for helping patch and modify Nintendo Switch games"
readme = "README.md"

[dependencies]
skyline_macro = { path = "./skyline_macro" }
nnsdk = { git = "https://github.com/ultimate-research/nnsdk-rs.git" }
libc-nnsdk = { git = "https://github.com/ultimate-research/libc-nnsdk.git" }

[features]
default = ["std"]
std = []
nro_internal = []
