[package]
name = "skyline"
version = "0.5.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ultimate-research/skyline-rs"
description = "A library for helping patch and modify Nintendo Switch games"
readme = "README.md"

[dependencies]
skyline_macro = { path = "./skyline_macro", version = "0.2.0" }
nnsdk = "0.5.0"
libc-nnsdk = "0.4.0"

[features]
default = ["std"]
std = ["skyline_macro/std"]
nro_internal = []
nso = ["skyline_macro/nso"]
