[package]
name = "skyline_macro"
version = "0.2.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"
license = "MIT"
description = "Macros for helping power skyline-rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
lazy_static = "1.4"

[features]
std = []
nso = []
